@@ -5,18 +5,29 @@ RUN cd /root/ \
        && tar xzf jboss-4.0.2.tar.gz \
        && rm -rf jboss-4.0.2.tar.gz
 
+ENV JAVA_OPTS="-Xms1G -Xmx1G -XX:MaxPermSize=256M -server"
 ENV JBOSS_HOME=/root/jboss-4.0.2
 ENV PATH=$PATH:/root/jboss-4.0.2/bin
+ENV TZ=America/Indiana/Indianapolis
 
 Add ./local/Docker_files/ifxjdbc.jar /root/jboss-4.0.2/server/default/lib/
-Add ./local/Docker_files/informix-ds.xml /root/jboss-4.0.2/server/default/deploy/
 Add ./web/i /root/jboss-4.0.2/server/default/deploy/jbossweb-tomcat55.sar/ROOT.war/i
 Add ./web/css /root/jboss-4.0.2/server/default/deploy/jbossweb-tomcat55.sar/ROOT.war/css
 Add ./web/js /root/jboss-4.0.2/server/default/deploy/jbossweb-tomcat55.sar/ROOT.war/js
 
 Add ./target/review /root/jboss-4.0.2/server/default/deploy/review.war
-Add ./local/Docker_files/OnlineReview.xml /root/jboss-4.0.2/server/default/deploy/review.war/WEB-INF/classes/
+
+RUN mkdir -p /root/web/conf
+Add ./conf/distribution_scripts /root/web/conf/distribution_scripts
+RUN mkdir -p /root/temp/dist-gen
+
+## tokenized
+Add ./jboss_files/deploy/tcs_informix-ds.xml /root/
+Add ./token.properties /root/
+RUN cat /root/token.properties | grep -v '^#' | grep -v '^$'| sed s/\\//\\\\\\//g | awk -F '=' '{print "s/@"$1"@/"$2"/g"}' | sed -f /dev/stdin /root/tcs_informix-ds.xml >> /root/jboss-4.0.2/server/default/deploy/informix-ds.xml
+RUN rm /root/token.properties
+RUN rm /root/tcs_informix-ds.xml
+
 Add ./local/Docker_files/AuthorizationHelper.class /root/jboss-4.0.2/server/default/deploy/review.war/WEB-INF/classes/com/cronos/onlinereview/util/
-Add ./local/Docker_files/cache.properties /root/jboss-4.0.2/server/default/deploy/review.war/WEB-INF/classes/
 
 CMD ["/root/jboss-4.0.2/bin/run.sh","-DFOREGROUND"]
